--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,27 @@
+body {
+    background-image: url('dark-wood.jpg');
+    color: #660198;
+    text-align: center;
+    font-family: 'Play', sans-serif;
+}
 h1 {
     margin-bottom: 25px;
 }
+ .btn {
+    background-color: #596C56;
+ }
 
 table {
     border: 1px solid black;
     text-align: center;
     margin-bottom: 25px;
+    opacity: 0.9;
 }
 
 td {
-  height: 15px;
-  width: 15px;
-  border: 1px solid black;
+  height: 17px;
+  width: 17px;
+  border: 1px solid #596C56;
 }
 .One {
     background-color: #FF0000;
@@ -52,6 +62,6 @@ td {
 
 
 .dead {
-    background-color: #F0F8FF;
+    background-image: url('dark-wood.jpg');
 
 }
