--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,20 @@
 body {
     background-image: url('dark-wood.jpg');
     color: #660198;
-    text-align: center;
     font-family: 'Play', sans-serif;
 }
-h1 {
-    margin-bottom: 25px;
+
+p {
+    font-size: 14px;
 }
+h1 {
+    text-align: center;
+}
+h2 {
+    margin-top: 50px;
+    text-align: center;
+}
+
  .btn {
     background-color: #596C56;
  }
